[package]
name = "supersonic-sniper"
version = "0.2.0"
edition = "2021"
authors = ["25x8 <25x8@tuta.io>"]
description = "A high-speed trading bot for Raydium on Solana"
license = "GPL-3"

[dependencies]
# Command-line argument parsing
clap = { version = "4.5.20", features = ["derive"] }

# Configuration management
config = "0.14.1"

# Serialization/deserialization
borsh = "1.5.1"
borsh-derive = "1.5.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

# Asynchronous runtime
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.12", features = ["time", "rt"] }
tungstenite = "0.24.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }

# Solana blockchain interaction
solana-client = "2.1.0"
solana-quic-client = "2.1.0"
solana-sdk = { version = "2.1.0", features = ["serde_json"] }
solana-program = "2.1.0"
solana-account-decoder = "2.1.0"
solana-transaction-status = "2.1.0"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "6.0.0"

mpl-token-metadata = "5.0.0-beta.0"

# Error handling
anyhow = "1.0.89"

# Other
log = "0.4.22"
env_logger = "0.11.5"
base64 = "0.22.1"
tokio-stream = "0.1.16"
num-derive = "0.4.2"
thiserror = "1.0.63"
num-traits = "0.2.19"
futures = "0.3.30"
chrono = "0.4.38"
url = "2.5.2"
http = "1.1.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
console-subscriber = "0.4.0"
dashmap = { version = "6.1.0", features = ["serde", "inline"] }
reqwest = { version = "0.12.8", features = ["json"] }
bincode = "1.3.3"
rand = "0.8.5"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"

#[build]
#rustflags = ["--cfg", "tokio_unstable"]

[profile.release]
opt-level = "z"       # Optimize for size (alternatively use "s" or 3 for speed)
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce parallelism in codegen for better optimization
panic = 'abort'       # Abort on panic to reduce binary size
strip = true          # Strip debugging symbols to minimize the binary size
